--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "trivia-bot-v2",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -20,8 +21,9 @@
   "dependencies": {
     "@discordjs/rest": "^1.7.1",
     "axios": "^1.4.0",
+    "chalk": "^5.3.0",
     "discord-api-types": "^0.37.50",
-    "discord.js": "^14.11.0",
+    "discord.js": "^14.7.1",
     "dotenv": "^16.3.1",
     "nodemon": "^3.0.1"
   }
