--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "chalk": "^5.3.0",
     "discord-api-types": "^0.37.50",
     "discord.js": "^14.7.1",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.3.1"
+  },
+  "devDependencies": {
     "nodemon": "^3.0.1"
   }
 }
